SonarCloud integration - Updated sonar properties file - Changed field name in travis.yml

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,21 @@
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.language=js
-sonar.projectBaseDir=.
+## Mandatory Parameters
+# Server
+sonar.host.url=https://sonarcloud.io
+
+# Project Configuration
 sonar.projectKey=sonarqube:iso-logger
+sonar.sources=src
+
+## Optional Parameters
+# Project identity
 sonar.projectName=iso-logger
 sonar.projectVersion=1.0
+
+# Project Configuration
+sonar.language=js
+sonar.projectBaseDir=.
 sonar.sourceEncoding=UTF-8
-sonar.sources=src
 sonar.tests=test
+
+# To import the LCOV report
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
