--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
     - "node_modules"
 addons:
-  sonarqube:
+  sonarcloud:
     organization: "dylanaubrey"
     token:
       secure: SONAR_TOKEN
