Updating travis.yml to integrate sonar.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ addons:
   sonarcloud:
     organization: "dylanaubrey"
     token:
-      secure: SONAR_TOKEN
+      secure: $SONAR_TOKEN
 script:
   - sonar-scanner
