--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ addons:
     organization: "dylanaubrey-github"
     token:
       secure: $SONAR_TOKEN
+    github_token:
+      secure: $SONAR_PR_ANALYSIS_TOKEN
 script:
   - npm test
   - sonar-scanner
+  - codecov
