--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^4.0.2",
+    "codecov": "^2.2.0",
     "cross-env": "^4.0.0",
     "dirty-chai": "^2.0.0",
     "eslint": "^3.19.0",
