Updating unit tests - added check-coverage flag into nyc config - added tests to check instance returned based on newInstance flag

--- a/.nycrc
+++ b/.nycrc
@@ -10,6 +10,6 @@
   "instrument": false,
   "cache": true,
   "all": true,
-  "check-coverage": false,
+  "check-coverage": true,
   "report-dir": "./coverage"
 }
