--- a/.babelrc
+++ b/.babelrc
@@ -1,42 +1,61 @@
 {
+  "comments": false,
   "env": {
     "browser": {
-      "comments": false,
       "presets": [
-        ["env", {
+        ["@babel/preset-env", {
           "debug": true,
+          "modules": false,
           "targets": { "browsers": "last 4 versions" },
-          "useBuiltIns": true
+          "useBuiltIns": "usage"
         }],
-        "stage-0"
+        "@babel/preset-stage-0"
+      ]
+    },
+    "debug": {
+      "presets": [
+        ["@babel/preset-env", {
+          "debug": true,
+          "modules": false,
+          "targets": { "browsers": "chrome >= 60" },
+          "useBuiltIns": "usage"
+        }],
+        "@babel/preset-stage-0"
       ]
     },
     "main": {
-      "comments": false,
       "presets": [
-        ["env", {
+        ["@babel/preset-env", {
           "debug": true,
           "targets": { "node": "6" },
-          "useBuiltIns": true
+          "useBuiltIns": "usage"
         }],
-        "stage-0"
+        "@babel/preset-stage-0"
       ]
     },
     "module": {
-      "comments": false,
       "presets": [
-        ["env", {
+        ["@babel/preset-env", {
           "debug": true,
           "modules": false,
           "targets": { "node": "6" },
-          "useBuiltIns": true
+          "useBuiltIns": "usage"
         }],
-        "stage-0"
+        "@babel/preset-stage-0"
       ]
-    },
-    "test": {
-      "plugins": ["istanbul"],
-      "presets": ["env", "stage-0"]
     }
-  }
+  },
+  "ignore": [
+    ".nyc_output",
+    ".vscode",
+    "bundle",
+    "coverage",
+    "docs",
+    "lib",
+    "node_modules",
+    "**/*.d.ts"
+  ],
+  "plugins": [
+    "lodash"
+  ]
 }
