--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,5 @@
 {
   "env": {
-    "browser": true,
-    "mocha": true,
     "node": true
   },
   "extends": [
@@ -9,28 +7,10 @@
   ],
   "parser": "babel-eslint",
   "rules": {
-    // overrides
-    "class-methods-use-this": 0,
-    "linebreak-style": ["error", "windows"],
-    "no-param-reassign": 0,
+    "linebreak-style": 0,
+    "no-param-reassign": ["error", { "props": false }],
     "no-underscore-dangle": 0,
     "one-var": ["error", { "initialized": "never" }],
-    "one-var-declaration-per-line": ["error", "initializations"],
-    // additional
-    "valid-jsdoc": ["error", {
-      "matchDescription": ".*",
-      "prefer": { "return": "return", "class": "constructor" },
-      "requireParamDescription": false,
-      "requireReturnDescription": false,
-      "requireReturnType": true
-    }],
-    "require-jsdoc": ["error", {
-      "require": {
-        "ArrowFunctionExpression": false,
-        "ClassDeclaration": true,
-        "FunctionDeclaration": true,
-        "MethodDefinition": true
-      }
-    }]
+    "one-var-declaration-per-line": ["error", "initializations"]
   }
 }
