--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,18 @@
 .nyc_output/
+.sonar/
 .vscode/
+bundle/
 coverage/
+docs/
 src/
-npm-debug.log
+test/
+*.log
+.*
+gulpfile.js
+karma.conf.js
+mocha.opts
+package-lock.json
+sonar-project.properties
+tsconfig.*
+tslint.json
+webpack.*
