--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iso-logger",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "An isomorphic logger that uses Winston on the server and console on the client.",
   "author": "Dylan Aubrey <dylanaubrey@gmail.com>",
   "license": "MIT",
@@ -10,11 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:dylanaubrey/iso-logger.git"
+    "url": "https://github.com/dylanaubrey/iso-logger"
   },
   "main": "lib/main/index.js",
   "module": "lib/module/index.js",
   "browser": "lib/browser/index.js",
+  "types": "lib/main/index.d.ts",
   "keywords": [
     "console",
     "isomorphic",
@@ -23,43 +24,78 @@
     "winston"
   ],
   "scripts": {
-    "build": "npm run test && npm run transpile",
-    "clean": "rimraf lib/*",
-    "coverage": "cross-env BABEL_ENV=test nyc mocha test/specs/index.js",
-    "lint": "eslint . --fix",
+    "analyze:bundle": "webpack-bundle-analyzer bundle/stats.json lib/umd --mode static --report bundle/report.html --no-open",
+    "build": "npm run clean && npm run test && npm run compile && npm run analyze:bundle && npm run document",
+    "clean": "gulp clean",
+    "compile": "npm run compile:main && npm run compile:module && npm run compile:browser && npm run compile:umd",
+    "compile:browser": "cross-env BABEL_ENV=browser gulp browser",
+    "compile:main": "cross-env BABEL_ENV=main gulp main",
+    "compile:module": "cross-env BABEL_ENV=module gulp module",
+    "compile:umd": "cross-env BABEL_ENV=browser gulp umd",
+    "debug:web": "cross-env BABEL_ENV=debug karma start --no-single-run --browsers Chrome",
+    "document": "gulp document",
+    "lint": "gulp lint",
     "publish:pkg": "npm run build && npm publish",
-    "test": "npm run lint && npm run coverage",
-    "transpile": "npm run clean && npm run transpile:browser && npm run transpile:main && npm run transpile:module",
-    "transpile:browser": "cross-env BABEL_ENV=browser babel src --out-dir lib/browser --copy-files",
-    "transpile:main": "cross-env BABEL_ENV=main babel src --out-dir lib/main --copy-files",
-    "transpile:module": " cross-env BABEL_ENV=module babel src --out-dir lib/module --copy-files"
+    "test": "npm run lint && npm run type-check && npm run test:web && npm run test:node",
+    "test:node": "cross-env TS_NODE_PROJECT=\"./tsconfig.test.json\" nyc mocha --opts \"./mocha.opts\"",
+    "test:web": "cross-env BABEL_ENV=browser karma start --single-run --browsers ChromeHeadless --reporters mocha,coverage-istanbul",
+    "type-check": "gulp type-check"
   },
   "dependencies": {
-    "winston": "^2.3.1"
+    "winston": "^2.4.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-istanbul": "^4.1.4",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "@babel/preset-stage-0": "^7.0.0-beta.36",
+    "@types/chai": "^4.0.8",
+    "@types/mocha": "^2.2.44",
+    "@types/node": "^9.3.0",
+    "@types/sinon": "^4.3.0",
+    "@types/sinon-chai": "^2.7.29",
+    "@types/winston": "^2.3.8",
+    "awesome-typescript-loader": "^3.4.1",
+    "babel-eslint": "^8.0.2",
+    "babel-plugin-lodash": "^3.3.2",
     "chai": "^4.0.2",
-    "codecov": "^2.2.0",
-    "cross-env": "^5.0.1",
-    "dirty-chai": "^2.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1",
-    "express": "^4.15.3",
-    "mocha": "^3.4.2",
-    "nyc": "^11.0.3",
-    "rimraf": "^2.6.1",
-    "sinon": "^2.3.5",
-    "sinon-chai": "^2.11.0",
-    "supertest": "^3.0.0"
+    "codecov": "^3.0.0",
+    "cross-env": "^5.1.3",
+    "del": "^3.0.0",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0-beta.0",
+    "gulp-sourcemaps": "^2.6.2",
+    "gulp-tslint": "^8.1.2",
+    "gulp-typedoc": "^2.2.0",
+    "gulp-typescript": "^3.2.3",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "karma": "^2.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.6",
+    "lodash-webpack-plugin": "^0.11.4",
+    "merge-stream": "^1.0.1",
+    "mocha": "^4.0.1",
+    "nyc": "^11.4.1",
+    "sinon": "^4.4.6",
+    "sinon-chai": "^3.0.0",
+    "source-map-loader": "^0.2.3",
+    "source-map-support": "^0.5.0",
+    "ts-node": "^4.0.2",
+    "tslint": "^5.8.0",
+    "typedoc": "^0.9.0",
+    "typescript": "^2.6.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.1",
+    "webpack-stream": "^4.0.0"
   }
 }
