--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,19 +3,19 @@
 sonar.host.url=https://sonarcloud.io
 
 # Project Configuration
-sonar.projectKey=sonarqube:iso-logger
+sonar.projectKey=sonarqube:isologger
 sonar.sources=src
 
 ## Optional Parameters
 # Project identity
-sonar.projectName=iso-logger
+sonar.projectName=isologger
 sonar.projectVersion=1.0
 
 # Project Configuration
-sonar.language=js
+sonar.language=ts
 sonar.projectBaseDir=.
 sonar.sourceEncoding=UTF-8
 sonar.tests=test
 
 # To import the LCOV report
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/node/lcov.info,coverage/web/lcov.info
